feat: update Keycloak JWT authentication converter and enhance lesson management endpoints